index.css
/* ... */
.landing-child {
  position: absolute;
  margin: 0 !important;
  top: calc(50% - 392.16px);
  left: -184px;
  border-radius: 50%;
  background-color: var(--secondary-50);
  width: 368px;
  height: 368px;
  z-index: 7;
}
.landing {
  position: relative;
  width: 100%;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: flex-start;
  text-align: left;
  font-size: var(--overline-small-size);
  color: var(--generic-white);
  font-family: var(--paragraph-small-regular);
}
/* Menu hamburguesa */
.menu-container {
  width: 100%;
  height: 100vh;
  position: fixed;
  z-index: 100;
  display: none;
  background-color: var(--color-gray-200);
  flex-direction: column;
  justify-content: space-between;
}
.show-menu-content {
  display: flex;
}
@media screen and (min-width: 1024px) {
  .menu-container,
  .menu-soluciones-responsive {
    display: none;
  }
}
@media screen and (max-width: 1280px) {
  #subscription-alert {
    left: 60vw;
  }
  .nav-container {
    display: flex;
    padding-left: var(--padding-181xl);
    padding-right: var(--padding-181xl);
  }
  .guatapay-me-da {
    align-self: stretch;
    width: auto;
  }
  .name-item {
    display: none;
  }
  .footer-container,
  .solicitar-demo,
  .testimonial1 {
    padding-left: var(--padding-181xl);
    box-sizing: border-box;
  }
  .testimonial1 {
    padding-right: 275px;
  }
  .footer-container,
  .solicitar-demo {
    padding-right: var(--padding-181xl);
  }
}
/* ... */

